--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,9 @@
 .container {
-    max-width: 800px; }
+    max-width: 800px;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+  
+  }
   .header {
     margin-top: 6rem;
     text-align: center; }
